<resources>
    <string name="app_name">Github</string>
    <string name="filter">Filter</string>
    <string name="pull_requests">Pull Requests</string>
    <string name="fetch">Fetch</string>
    <string name="user_name">User name</string>
    <string name="repository_name">Repository name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="apply">Apply</string>
    <string name="open_pull_requests">Open Pull Requests</string>
    <string name="closed_pull_requests">Closed Pull Requests</string>
</resources>