<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/filter_bottom_sheet"
    android:elevation="5dp"
    android:padding="15dp"
    style="@style/AppBottomSheetDialogTheme"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <CheckBox
                android:id="@+id/pr_status_closed_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/closed_pull_requests"/>
            <CheckBox
                android:id="@+id/pr_status_open_checkbox"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/open_pull_requests"/>
        </LinearLayout>
        <View android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/filter_apply_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/filter_icon"
            android:text="@string/apply" />
    </LinearLayout>
</LinearLayout>