<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/github_logo"
        android:background="@drawable/ic_iconmonstr_github_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:id="@+id/tv_header_pr_filter"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/github_logo"
        app:layout_constraintEnd_toStartOf="@+id/filter_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:textSize="22sp"
        android:text="@string/pull_requests" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_button"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:drawableEnd="@drawable/ic_baseline_filter_alt_24"
        android:background="@drawable/filter_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:id="@+id/dividerTop"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_button"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/text_input_repo_user"
        app:layout_constraintTop_toBottomOf="@+id/dividerTop"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="170dp"
            android:id="@+id/repo_name_input"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_marginEnd="20dp"
            android:hint="@string/repository_name"
            android:inputType="text" />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="170dp"
            android:id="@+id/user_name_input"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:hint="@string/user_name"
            android:inputType="text" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fetch_button"
        android:layout_marginHorizontal="15dp"
        android:text="@string/fetch"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/filter_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_repo_user" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/tv_error_when_no_user_inputs"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fetch_button"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:textSize="22sp"
        android:text="No data!" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pull_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_when_no_user_inputs"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>